--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 .portada{
 	width: 100%;
 	height: 100%;
-	background: url(imagenes/portada2.jpg);
+	background: url(https://drive.google.com/file/d/1-hfNDCtKuFHP_aVoIjQdbRXGKXsPC-Bn/view?usp=sharing);
 	background-attachment: fixed;
 }
 .contenido{
