--- a/menu.css
+++ b/menu.css
@@ -6,7 +6,7 @@
 		font-family: 'Montserrat Alternates', sans-serif;
 	}
 	body{
-		background: url(imagenes/menu1.jpeg);
+		background: url(https://drive.google.com/file/d/1mVVJ9XRJlui2Pp2ozdtq7w1-8cJkiEBV/view?usp=sharing);
 		background-size: 100vw 100vh;
 		background-repeat: no-repeat ;
 	}
